@@ -244,9 +244,12 @@ NsConfUpdate(void)
     /*
      * tclinit.c
      */
-     
-    Ns_HomePath(&ds, "modules", "tcl", NULL);
-    nsconf.tcl.sharedlibrary = Ns_DStringExport(&ds);
+
+    nsconf.tcl.sharedlibrary = Ns_ConfigGetValue(NS_CONFIG_PARAMETERS, "tcllibrary");
+    if (nsconf.tcl.sharedlibrary == NULL) {
+        Ns_HomePath(&ds, "modules", "tcl", NULL);
+        nsconf.tcl.sharedlibrary = Ns_DStringExport(&ds);
+    }
     nsconf.tcl.lockoninit = GetBool("tclinitlock", TCL_INITLCK_BOOL);
 
     Ns_DStringFree(&ds);
